--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -84,6 +84,7 @@
             android:text="我已阅读并同意" />
 
         <TextView
+            android:id="@+id/tv_user_agent"
             style="@style/SmallTextStyle"
             android:text="《泰溪科技用户服务协议》"
             android:textColor="@color/colorPrimaryDark" />
